@@ -2574,6 +2574,22 @@ typedef struct tagNMTVDISPINFOW {
 } NMTVDISPINFOW, *LPNMTVDISPINFOW;
 #define _TV_DISPINFOW tagNMTVDISPINFOW
 #define TV_DISPINFOW NMTVDISPINFOW
+#if (_WIN32_IE >= 0x0400)
+typedef struct tagNMTVGETINFOTIPA {
+	NMHDR hdr;
+	LPSTR pszText;
+	int cchTextMax;
+	HTREEITEM hItem;
+	LPARAM lParam;
+} NMTVGETINFOTIPA, *LPNMTVGETINFOTIPA;
+typedef struct tagNMTVGETINFOTIPW {
+	NMHDR hdr;
+	LPWSTR pszText;
+	int cchTextMax;
+	HTREEITEM hItem;
+	LPARAM lParam;
+} NMTVGETINFOTIPW, *LPNMTVGETINFOTIPW;
+#endif
 typedef struct _TV_KEYDOWN {
 	NMHDR hdr;
 	WORD wVKey;
@@ -3279,6 +3295,11 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define TV_DISPINFO NMTVDISPINFOW
 #define NMTVDISPINFO NMTVDISPINFOW
 #define LPNMTVDISPINFO LPNMTVDISPINFOW
+#if (_WIN32_IE >= 0x0400)
+#define NMTVGETINFOTIP NMTVGETINFOTIPW
+#define LPNMTVGETINFOTIP LPNMTVGETINFOTIPW
+#define TVN_GETINFOTIP TVN_GETINFOTIPW
+#endif
 #define TVN_SELCHANGING TVN_SELCHANGINGW
 #define TVN_SELCHANGED TVN_SELCHANGEDW
 #define TVN_GETDISPINFO TVN_GETDISPINFOW
@@ -3443,6 +3464,11 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define TV_DISPINFO NMTVDISPINFOA
 #define NMTVDISPINFO NMTVDISPINFOA
 #define LPNMTVDISPINFO LPNMTVDISPINFOA
+#if (_WIN32_IE >= 0x0400)
+#define NMTVGETINFOTIP NMTVGETINFOTIPA
+#define LPNMTVGETINFOTIP LPNMTVGETINFOTIPA
+#define TVN_GETINFOTIP TVN_GETINFOTIPA
+#endif
 #define TVN_SELCHANGING TVN_SELCHANGINGA
 #define TVN_SELCHANGED TVN_SELCHANGEDA
 #define TVN_GETDISPINFO TVN_GETDISPINFOA
