@@ -1,8 +1,13 @@
+2004-01-01  Mattia Barbon  <mbarbon@users.sourceforge.net>
+
+	* include/commctrl.h (TVN_GETINFOTIP): Add UNICODE mappings.
+	(NMTVGETINFOTIP): Add structure.
+
 2003-12-08  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/winuser.h (DISPLAY_DEVICE_*): Remove defines.
 	* include/wingdi.h  (DISPLAY_DEVICE_REMOVABLE,
-	DISPLAY_DEVICE_MODESPRINED): Add defines.
+	DISPLAY_DEVICE_MODESPRUNED): Add defines.
 
 2003-12-08  Hartmut Honisch  <hhonisch@users.sourceforge.net>
 
